API-40-feat: add methods to search tickets by ID and some word in all fields
