# internal/routes/routes.go
@@ -4,6 +4,7 @@ import (
 	"orderstreamrest/internal/config"
 	"orderstreamrest/internal/middleware"
 	"orderstreamrest/internal/service/healthcheck"
+	"orderstreamrest/internal/service/tickets"
 
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
@@ -16,7 +17,10 @@ func InitiateRoutes(engine *gin.Engine, cfg *config.App) {
 	engine.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	healthGroup := engine.Group("/healthcheck", middleware.Auth())
-
 	healthGroup.GET("/", healthcheck.Health(cfg))
+
+	ticketsGroup := engine.Group("/tickets")
+	ticketsGroup.GET("/:id", tickets.SearchTicketByID(cfg))
+	ticketsGroup.GET("/query", tickets.GetByWord(cfg))
 
 }
